오류사항 수정 및SQL문 작성,  프론트 전달사항 작성