@@ -6,27 +6,19 @@ import com.example.ikea.domain.OrderStatus;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 @AllArgsConstructor
 public class OrderResponseDto {
 
     private Long orderId;
-
     private OrderStatus orderStatus;
-
     private Integer totalPrice;
-
     private Integer finalPrice;
-
     private String orderNo;
-
-//    private String payment;
-
     private String address;
-
     private List<OrderItemDto> orderItems;
 
     public OrderResponseDto(Order order) {
@@ -36,8 +28,10 @@ public class OrderResponseDto {
         this.finalPrice = order.getFinalPrice();
         this.orderNo = order.getOrderNo();
         this.address = order.getAddress();
-        this.orderItems = order.getOrderItemList().stream()
+        this.orderItems = order.getOrderItemList() == null
+                ? Collections.emptyList()
+                : order.getOrderItemList().stream()
                 .map(OrderItemDto::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
